--- a/gophercon.conf
+++ b/gophercon.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     location / {
-        proxy_pass http://docker.readthedocs.org:80;
+        proxy_pass http://gophercon.dev.docker:8080;
         proxy_pass_header Server;
         proxy_redirect off;
         proxy_set_header Host $http_host;
@@ -9,21 +9,7 @@ server {
         proxy_set_header X-Forwarded-Proto http;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Scheme $scheme;
-        proxy_set_header X-RTD-SLUG docker;
         proxy_connect_timeout 60s;
         proxy_read_timeout 20s;
     }
-}
-
-server {
-      listen 443;
-      server_name blue1.koffiedik.net;
-      rewrite ^ http://$server_name$request_uri? permanent;
-      ssl on;
-      ssl_certificate /etc/nginx/certificates/server.crt;
-      ssl_certificate_key /etc/nginx/certificates/server.key;
-      ssl_session_timeout 5m;
-      ssl_protocols SSLv3 TLSv1;
-      ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv3:+EXP;
-      ssl_prefer_server_ciphers on;
 }
