--- a/gophercon.conf
+++ b/gophercon.conf
@@ -1,4 +1,7 @@
 server {
+      resolver 172.17.42.1 valid=20s; 
+      resolver_timeout 10s; 
+
     listen 80;
     location / {
         proxy_pass http://gophercon.dev.docker:8080;
