more dns efforts

--- a/gophercon.conf
+++ b/gophercon.conf
@@ -1,10 +1,11 @@
 server {
-      resolver 172.17.42.1 valid=20s; 
-      resolver_timeout 10s; 
+
+      resolver 172.17.42.1;
+      set $backend_upstream http://gophercon.dev.docker:8080;
 
     listen 80;
     location / {
-        proxy_pass http://gophercon.dev.docker:8080;
+        proxy_pass $backend_upstream;
         proxy_pass_header Server;
         proxy_redirect off;
         proxy_set_header Host $http_host;
