giving up for now

--- a/gophercon.conf
+++ b/gophercon.conf
@@ -1,7 +1,7 @@
 server {
 
       resolver 172.17.42.1;
-      set $backend_upstream http://gophercon.dev.docker:8080;
+      set $backend_upstream http://127.0.0.1:8080;
 
     listen 80;
     location / {
