another try with server name

--- a/gophercon.conf
+++ b/gophercon.conf
@@ -3,6 +3,9 @@ server {
       resolver 172.17.42.1;
       set $backend_upstream http://127.0.0.1:8080;
 
+        # Make site accessible from http://localhost/
+        server_name www.gopheracademy.com;
+
     listen 80;
     location / {
         proxy_pass $backend_upstream;
